samples/_failures_safe/1761139848_7471fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ff3f1b2.c: In function ‘tokenize’:
./samples/SAFE/__tmp_5ff3f1b2.c:151:13: error: expected expression at end of input
  151 |             success =
      |             ^~~~~~~
./samples/SAFE/__tmp_5ff3f1b2.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5ff3f1b2.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5ff3f1b2.c:151:13: error: expected declaration or statement at end of input
